<resources>
    <string name="app_name">MovieTvCatalogue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_movies">Detail Movies</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="item_title">Title</string>
    <string name="item_daterelease">Date Release</string>
    <string name="movies">Movies</string>
    <string name="tvshows">TV Shows</string>
    <string name="detail_image_movies">Detail image movies</string>
    <string name="title_genre">Genre:</string>
    <string name="title_date_release">Date Release:</string>
    <string name="title_director">Director:</string>
    <string name="title_creator">Creator:</string>
    <string name="title_overview">Overview</string>
    <string name="title_status">Status</string>
    <string name="title_type">Type:</string>
    <string name="title_language">Language</string>
    <string name="title_budget">Budget</string>
    <string name="title_revenue">Revenue</string>
    <string name="item_genre">Genre</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="date_release">Date Release</string>
    <string name="director">Director</string>
    <string name="creator">Creator</string>
    <string name="overview">Overview</string>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="language">Language</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="title_tab_movies">Detail Movies</string>
    <string name="title_tab_tvshows">Detail TV Shows</string>
</resources>