<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_img_poster_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:id="@+id/fl_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_poster"
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:background="@android:color/white"
                        android:contentDescription="@string/detail_image_movies"
                        android:scaleType="fitXY"
                        android:src="@color/teal_200" />

                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_title_detail_margin"
                android:layout_marginTop="@dimen/top_text_value_detail_margin"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:textSize="@dimen/text_size_title_detail"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_img_poster_detail"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/tv_genre_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_title_detail_margin"
                android:layout_marginTop="@dimen/top_text_title_detail_margin"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:text="@string/title_genre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/top_text_value_detail_margin"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:layout_marginBottom="@dimen/bottom_text_title_detail_margin"
                android:drawablePadding="@dimen/draw_padding"
                android:textSize="@dimen/text_size_detail"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed-medium"
                app:drawableLeftCompat="@drawable/ic_movie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre_title"
                tools:text="@string/genre" />

            <TextView
                android:id="@+id/tv_daterelease_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_title_detail_margin"
                android:layout_marginTop="@dimen/top_text_title_detail_margin"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:text="@string/title_date_release"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

            <TextView
                android:id="@+id/tv_daterelease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_value_detail_margin"
                android:layout_marginTop="@dimen/top_text_value_detail_margin"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:drawablePadding="@dimen/draw_padding"
                android:textSize="@dimen/text_size_detail"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed-medium"
                app:drawableLeftCompat="@drawable/ic_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_daterelease_title"
                tools:text="@string/date_release" />

            <TextView
                android:id="@+id/tv_director_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_title_detail_margin"
                android:layout_marginTop="@dimen/top_text_title_detail_margin"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:text="@string/title_director"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_daterelease" />

            <TextView
                android:id="@+id/tv_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_value_detail_margin"
                android:layout_marginTop="@dimen/top_text_value_detail_margin"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:drawablePadding="@dimen/draw_padding"
                android:textSize="@dimen/text_size_detail"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed-medium"
                app:drawableStartCompat="@drawable/ic_chair_director"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_director_title"
                tools:text="@string/director" />

            <TextView
                android:id="@+id/tv_creator_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_title_detail_margin"
                android:layout_marginTop="@dimen/top_text_title_detail_margin"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:text="@string/title_creator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_director" />

            <TextView
                android:id="@+id/tv_creator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_value_detail_margin"
                android:layout_marginTop="@dimen/top_text_value_detail_margin"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:drawablePadding="@dimen/draw_padding"
                android:textSize="@dimen/text_size_detail"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed-medium"
                app:drawableStartCompat="@drawable/ic_chair_creator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_creator_title"
                tools:text="@string/creator" />


            <TextView
                android:id="@+id/tv_description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_title_detail_margin"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:text="@string/title_overview"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_creator" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_value_detail_margin"
                android:layout_marginTop="@dimen/top_text_value_detail_margin"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:drawablePadding="@dimen/draw_padding"
                android:textSize="@dimen/text_size_detail"
                android:textStyle="normal|italic"
                android:fontFamily="sans-serif-condensed-light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_description_title"
                tools:text="@string/overview" />


            <TextView
                android:id="@+id/tv_status_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_title_detail_margin"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:text="@string/title_status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_description" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_value_detail_margin"
                android:layout_marginTop="@dimen/top_text_value_detail_margin"
                android:layout_marginBottom="@dimen/bottom_text_title_detail_margin"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:textSize="@dimen/text_size_detail"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed-light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_status_title"
                tools:text="@string/status" />


            <TextView
                android:id="@+id/tv_type_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_title_detail_margin"
                android:layout_marginTop="@dimen/top_text_title_detail_margin"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:text="@string/title_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_status" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_value_detail_margin"
                android:layout_marginTop="@dimen/top_text_value_detail_margin"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:layout_marginBottom="@dimen/bottom_text_title_detail_margin"
                android:textSize="@dimen/text_size_detail"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed-light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_type_title"
                tools:text="@string/type" />

            <TextView
                android:id="@+id/tv_language_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_title_detail_margin"
                android:layout_marginTop="@dimen/top_text_title_detail_margin"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:text="@string/title_language"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_type" />

            <TextView
                android:id="@+id/tv_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_value_detail_margin"
                android:layout_marginTop="@dimen/top_text_value_detail_margin"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:layout_marginBottom="@dimen/bottom_text_title_detail_margin"
                android:drawablePadding="@dimen/draw_padding"
                android:textSize="@dimen/text_size_detail"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed-light"
                app:drawableLeftCompat="@drawable/ic_language"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_language_title"
                tools:text="@string/language" />

            <TextView
                android:id="@+id/tv_budget_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_title_detail_margin"
                android:layout_marginTop="@dimen/top_text_title_detail_margin"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:text="@string/title_budget"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_language" />

            <TextView
                android:id="@+id/tv_budget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_value_detail_margin"
                android:layout_marginTop="@dimen/top_text_value_detail_margin"
                android:layout_marginBottom="@dimen/bottom_text_title_detail_margin"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:textSize="@dimen/text_size_detail"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed-light"
                app:drawableLeftCompat="@drawable/ic_money"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_budget_title"
                tools:text="@string/budget" />

            <TextView
                android:id="@+id/tv_revenue_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_title_detail_margin"
                android:layout_marginTop="@dimen/top_text_title_detail_margin"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:text="@string/title_revenue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_budget" />

            <TextView
                android:id="@+id/tv_revenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_text_value_detail_margin"
                android:layout_marginTop="@dimen/top_text_value_detail_margin"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:layout_marginBottom="@dimen/bottom_text_title_detail_margin"
                android:textSize="@dimen/text_size_detail"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed-light"
                app:drawableLeftCompat="@drawable/ic_money"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_revenue_title"
                tools:text="@string/revenue" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>